# drip-protocol

./: .gitignore  Cargo.toml  README.md  spec.md
app/: .env.example  .gitignore  AGENT_SKILLS.md  CONTRIBUTING.md  README.md  package-lock.json  package.json
app/src/app/: globals.css  layout.tsx
app/src/app/(app)/: layout.tsx
app/src/components/: providers.tsx
app/src/components/agent/: agent-card.tsx  agent-grid.tsx  agent-markets-list.tsx  oracle-methodology.tsx  track-record.tsx
app/src/components/animations/: price-ticker.tsx  trade-notification.tsx
app/src/components/conviction/: conviction-leaderboard.tsx  conviction-score.tsx
app/src/hooks/: use-gsap-counter.ts  use-live-market.ts  use-live-positions.ts  use-performance-mode.ts  use-reduced-motion.ts  use-trade-execution.ts
app/src/lib/: engine-math.ts  mock-agents.ts  mock-data.ts  mock-trades.ts
app/src/stores/: account-store.ts  index.ts  market-store.ts  trade-store.ts  ui-store.ts
app/src/types/: agent.ts  engine.ts  index.ts  market.ts
programs/drip/: Cargo.toml
programs/drip/src/: errors.rs  lib.rs  state.rs
programs/drip/src/instructions/: accrue_market.rs  deposit.rs  initialize_market.rs  liquidate.rs  mod.rs  trade.rs  withdraw.rs
scripts/: proof-strength-audit-results.md
src/: percolator.rs  wide_math.rs
tests/: ak.rs  amm_tests.rs  fuzzing.rs  kani.rs  proofs_arithmetic.rs  proofs_audit.rs  proofs_checklist.rs  proofs_instructions.rs  proofs_invariants.rs  proofs_lazy_ak.rs  proofs_liveness.rs  proofs_safety.rs  proofs_v1131.rs  unit_tests.rs
tests/common/: mod.rs
(+40 files in other folders)
